Fixed padding on mobile for links page

--- a/src/styles/links.scss
+++ b/src/styles/links.scss
@@ -43,3 +43,14 @@
     text-decoration-color: black;
   }
 }
+
+@media screen and (max-width: 864px) {
+  .links-container {
+    display: flex;
+    flex-direction: column;
+    gap: 55px;
+    height: 100dvh;
+    padding: 15px;
+    font-size: 14px;
+  }
+}
